--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
   <section class="container">
     <div class="container-left">
-      <div class="spiderman-logo"></div>
+      <div class="spiderman-logo">
+        <img src="./assets/img/spiderman-text.png" alt="">
+      </div>
       <div class="text">
         <p>Lorem ipsum dolor sit amet, 
           consectetur adipiscing elit. 
@@ -57,7 +59,7 @@
       </div>
     </div>
     <div class="container-right">
-      <img src="./assets/img/spider-man.png" alt="">
+      <img src="./assets/img/spiderman a.png" alt="">
     </div>
   </section>
 </body>
