--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;400&display=swap" rel="stylesheet">
   <script src="./assets/js/svg-inject.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
   <header>
@@ -16,6 +17,9 @@
       <div class="nav-menu">
         <div class="logo">
           <img src="./assets/img/logo.svg" onload="SVGInject(this)" alt="">
+        </div>
+        <div class="toggle-nav">
+          <a href="#"><img src="./assets/img/menu.svg" onload="SVGInject(this)" alt=""></a>
         </div>
         <ul class="nav-list">
           <li><a href="" class="nav-link">Home</a></li>
@@ -62,5 +66,8 @@
       <img src="./assets/img/spiderman a.png" alt="">
     </div>
   </section>
+
+  <script src="./assets/js/app.js"></script>
+
 </body>
 </html>
